--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <!-- Google font family  -->
     <link
-      href="https://fonts.googleapis.com/css?family=Nunito:200,300,400,700"
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap"
       rel="stylesheet"
+    />
+    <!-- Favicon -->
+    <link
+      rel="shortcut icon"
+      href="/imgs/pink-donut-favicon32x32.ico"
+      type="image/x-icon"
     />
 
     <!-- Bootstrap CSS -->
@@ -20,7 +26,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="app.css" />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Museum of Candy</title>
   </head>
@@ -29,13 +35,13 @@
     <!-- Nav -->
     <nav
       id="mainNav"
-      class="navbar navbar-dark navbar-expand-md py-0 fixed-top"
+      class="navbar navbar-light navbar-expand-md py-0 fixed-top"
     >
       <a href="#" class="navbar-brand">CANDY</a>
       <button
         class="navbar-toggler"
         data-toggle="collapse"
-        data-target="navLinks"
+        data-target="#navLinks"
         aria-label="Toggle navBar"
       >
         <span class="navbar-toggler-icon"></span>
@@ -90,24 +96,102 @@
     </section>
     <!-- Section  -->
     <section class="container-fluid px-0">
-      <div class="row align-items-center">
-        <div class="col-md-6">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
           <img
             class="img-fluid"
             src="/imgs/milk.png"
             alt="Image of jars with milk and donuts"
           />
         </div>
+        <div class="col-md-6 order-1 order-md-2 text-center">
+          <div id="side-text" class="row justify-content-center">
+            <div class="col-10 col-lg-8 mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                id="loly"
+                src="/imgs/lolli_icon.png"
+                alt="Image of lolypop"
+                class="d-none d-lg-inline"
+              />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Necessitatibus, deleniti accusantium. Illum unde quasi accusamus
+                vero nihil quas labore magni, vel, suscipit, reprehenderit harum
+                repellat veritatis similique id expedita eius voluptate
+                blanditiis est consequatur laboriosam nemo. Culpa soluta
+                deleniti ut reiciendis eius dicta molestias atque nostrum
+                provident pariatur, natus totam.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
         <div class="col-md-6 text-center">
-          <div id="side-text" class="text-center mt-5">
-            <h2>MUSEUM OF CANDY</h2>
-            <img src="/imgs/lolli_icon.png" alt="Image of lolypop" />
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              laudantium accusamus fuga architecto expedita vitae ab delectus
-              dolorem repudiandae molestiae! Voluptatem, facere iure commodi sed
-              itaque laboriosam optio quia placeat!
-            </p>
+          <div id="side-text" class="row justify-content-center">
+            <div class="col-10 col-lg-8 mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                id="loly"
+                src="/imgs/lolli_icon.png"
+                alt="Image of lolypop"
+                class="d-none d-lg-inline"
+              />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Necessitatibus, deleniti accusantium. Illum unde quasi accusamus
+                vero nihil quas labore magni, vel, suscipit, reprehenderit harum
+                repellat veritatis similique id expedita eius voluptate
+                blanditiis est consequatur laboriosam nemo. Culpa soluta
+                deleniti ut reiciendis eius dicta molestias atque nostrum
+                provident pariatur, natus totam.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img
+            class="img-fluid"
+            src="/imgs/gumball.png"
+            alt="Image of Candy machine"
+          />
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img
+            class="img-fluid"
+            src="/imgs/sprinkles.png"
+            alt="Image of sprinkles"
+          />
+        </div>
+        <div class="col-md-6 order-1 order-md-2 text-center">
+          <div id="side-text" class="row justify-content-center">
+            <div class="col-10 col-lg-8 mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                id="loly"
+                src="/imgs/lolli_icon.png"
+                alt="Image of lolypop"
+                class="d-none d-lg-inline"
+              />
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Necessitatibus, deleniti accusantium. Illum unde quasi accusamus
+                vero nihil quas labore magni, vel, suscipit, reprehenderit harum
+                repellat veritatis similique id expedita eius voluptate
+                blanditiis est consequatur laboriosam nemo. Culpa soluta
+                deleniti ut reiciendis eius dicta molestias atque nostrum
+                provident pariatur, natus totam.
+              </p>
+            </div>
           </div>
         </div>
       </div>
@@ -129,6 +213,7 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+
     <script src="script.js"></script>
   </body>
 </html>
